# dataplatform_dev_DE25_johnny_hyytiainen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
01_intro_terminal_versionshantering/: notes_day_one.md
01_lecture_intro_terminal_version_control/: branch_test.md  notes_day_one.md
02_lecture_communincation_onlie/: notes_day2_http.md  notes_day_two.md
03_leccture_FastAPI_Pydantic/: lecture_03_notes.md
04_lecture_workshop/: lecture_04_notes.md  pair_lecture_04.py
05.5_lecture_postgres_psycopg_fastAPI/: lecture_05.5_notes.md
05_lecture_postgres_pgadmin/: lecture_05_notes.md
07_lecture_/: lecture_07_notes.md
07_lecture_etl_elt_filetypes/: lecture_07_notes.md
07_lecture_pandas/: lecture_07_notes.md  lecture_08_pandas.py
08_lecture_agile_development/: lecture_08_notes.md
08_lecture_pandas/: lecture_08_notes.md  lecture_08_pandas.py
09_lecture_docker_basics_bonus/: lecture_09_notes.md  main.py
10_lecture_kafka_rabbitmq/: lecture_10_app.py  lecture_10_notes.md
12_lecture_regex/: lecture_regex_notes.md
docs/: notes_day2_http.md
exercises/: api.py  api_parameters_guide.md  ex_01_weather_logger.py  ex_02_weather_logger.py  ex_03_pokemon_get.py  ex_03_v2_pokemon_get.py  ex_04_pokemon_nested.py  ex_04_v2_pokemon_nested.py  exercise_weather_logger.md
schema/: fox.py  pair_schema.py  product_lecture_09.py  product_lecture_10.py  products_lecture_05.py  user.py
test_db/: data_modeling_glossary.md  glossary_api.py  python_glossary.md  seed_test_db.py  sql_glossary.md
(+9 files in other folders)
